Novas implementações e correções

--- a/app/src/main/res/drawable/bg_background_gradient.xml
+++ b/app/src/main/res/drawable/bg_background_gradient.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/background_btn_login"
-        android:endColor="@color/background_login"
+        android:startColor="@color/background_btn"
+        android:centerColor="#1000AB"
+        android:endColor="#1600E2"
         android:angle="100"
         android:type="linear"/>
 </shape>
