--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_login"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/background_app">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_background_gradient"
-                android:title="@string/app_name"
+                android:title="@string/app_activity_add"
                 android:titleTextColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -68,23 +68,139 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/btnAddClientRegister"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
+        app:layout_constraintVertical_bias="1.0">
 
         <EditText
             android:id="@+id/inputClientName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/placeholder_name"
+            android:layout_marginTop="16dp"
+            android:hint="@string/placeholder_name_client"
+            android:inputType="text"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="@+id/constratintFormClient"
-            app:layout_constraintStart_toStartOf="@+id/constratintFormClient"
-            app:layout_constraintTop_toTopOf="@+id/constratintFormClient"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textColorLink="@color/white"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"/>
+            app:layout_constraintEnd_toEndOf="@+id/constratintFormClient"
+            app:layout_constraintStart_toStartOf="@+id/constratintFormClient"
+            app:layout_constraintTop_toTopOf="@+id/constratintFormClient" />
+
+        <EditText
+            android:id="@+id/inputCpfClient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="@string/placeholder_cpf_client"
+            android:inputType="number"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/white"
+            app:layout_constraintEnd_toEndOf="@+id/constratintFormClient"
+            app:layout_constraintStart_toStartOf="@+id/constratintFormClient"
+            app:layout_constraintTop_toBottomOf="@+id/inputClientName" />
+
+        <EditText
+            android:id="@+id/inputPhoneClient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="@string/placeholder_phone_client"
+            android:inputType="phone"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/white"
+            app:layout_constraintEnd_toEndOf="@+id/constratintFormClient"
+            app:layout_constraintStart_toStartOf="@+id/constratintFormClient"
+            app:layout_constraintTop_toBottomOf="@+id/inputCpfClient" />
+
+        <EditText
+            android:id="@+id/inputEmailClient"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint="@string/placeholder_email_client"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/white"
+            android:textColorHint="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputPhoneClient" />
+
+        <EditText
+            android:id="@+id/inputBirthDateClient"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint="@string/placeholder_birth_date_client"
+            android:inputType="date"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputEmailClient" />
+
+        <EditText
+            android:id="@+id/inputAddressClient"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:minHeight="48dp"
+            android:hint="@string/placeholder_address_client"
+            android:inputType="text"
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/white"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputBirthDateClient" />
+
+        <EditText
+            android:id="@+id/inputCityClient"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:inputType="text"
+            android:hint="@string/placeholder_city_client"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/white"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputAddressClient" />
+
+        <EditText
+            android:id="@+id/inputCpeClient"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint="@string/placeholder_cep_client"
+            android:minHeight="48dp"
+            android:inputType="textPostalAddress"
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/white"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputCityClient" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -92,8 +208,8 @@
         android:id="@+id/btnAddClientRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/background_btn_login"
-        android:backgroundTint="@color/background_btn_login"
+        android:background="@color/background_btn"
+        android:backgroundTint="@color/background_btn"
         android:onClick="AddClient_Click"
         android:text="@string/app_add_client_btn"
         android:textSize="20sp"
