--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_login"
+    android:background="@color/background_app"
     tools:context=".activity.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -114,7 +114,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/background_btn_login"
+        android:backgroundTint="@color/background_btn"
         android:onClick="Login"
         android:text="@string/app_login"
         android:textSize="20sp"
@@ -131,7 +131,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/background_btn_login"
+        android:backgroundTint="@color/background_btn"
         android:onClick="Register"
         android:text="@string/app_register_btn"
         android:textSize="20sp"
