--- a/app/src/main/res/layout/item_client.xml
+++ b/app/src/main/res/layout/item_client.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_login">
+    android:background="@color/background_app">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,19 +19,19 @@
             android:layout_weight="1"
             android:text="@string/app_nome_cliente"
             android:textColor="@color/white"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/btnEditClient"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:src="@drawable/ic_edit"
             android:contentDescription="@string/app_edit_client_btn"
             />
         <ImageView
             android:id="@+id/btnDeleteClient"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:src="@drawable/delete_24dp_e8eaed"
             android:contentDescription="@string/app_delte_client_btn"
             />
