--- a/app/src/main/res/layout/item_client.xml
+++ b/app/src/main/res/layout/item_client.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp"
+        android:paddingBottom="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
         <TextView
@@ -25,16 +29,15 @@
             android:id="@+id/btnEditClient"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/ic_edit"
             android:contentDescription="@string/app_edit_client_btn"
-            />
+            android:src="@drawable/ic_edit" />
+
         <ImageView
             android:id="@+id/btnDeleteClient"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/delete_24dp_e8eaed"
             android:contentDescription="@string/app_delte_client_btn"
-            />
+            android:src="@drawable/delete_24dp_e8eaed" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
